# kannolo

./: .gitignore  Cargo.toml  README.md  build.rs  gt_quora_10  gt_sift_10  pyproject.toml
.github/workflows/: publish-wheels.yml  test-linux.yml  test-macos.yml
docs/: Binaries.md  MultiVectorUsage.md  PythonUsage.md  ReplicateResults.md  RunExperiments.md  RustUsage.md  WheelPublishing.md
experiments/best_configs/msmarco-v1/: rerank_ms_marco_cocondenser_two_levels_pq.toml
experiments/best_configs/msmarco-v1/snowflake/: snowflake_pq_adaptive.toml
experiments/best_configs/msmarco-v1/splade-cocondenser/mem_budget_1.5/: splade_adaptive.toml
experiments/best_configs/sift1m/: sift_adaptive.toml
experiments/ecir2025/: dense_ms_marco_dragon.toml  dense_ms_marco_star.toml  dense_sift1m.toml  pq_ms_marco_dragon.toml  pq_sift.toml  sparse_ms_marco_splade.toml
experiments/grids/: dragon_adaptive.toml  lotte_cocondenser_adaptive.toml  sift_adaptive.toml  splade.toml  splade_adaptive.toml  splade_cocondenser_adaptive.toml
experiments/multivector/: rerank_plain_msmarco.toml  rerank_two_level_pq_msmarco.toml
notebooks/: dense_euclidean_benchmark.ipynb  kannolo_demo_dense_plain.ipynb  kannolo_demo_sparse.ipynb  sparse_multivec_rerank_benchmark.ipynb  sparse_plain_benchmark.ipynb
reproduce_experiments/ecir2025/: dense_ms_marco_dragon.toml  dense_ms_marco_star.toml  dense_sift1m.toml  pq_ms_marco_dragon.toml  sparse_ms_marco_splade.toml
scripts/: acorn_benchmark.py  extract_best_results.py  find_best_grid_results_by_recall_range.py  perf_compare.py  requirements.txt  run_experiments.py  run_grid_search.py
src/: distances.rs  graph.rs  lib.rs  quantizers.rs  visited_set.rs
src/clustering/kmeans/: mod.rs
src/datasets/: dataset.rs  dense_dataset.rs  multivector_dataset.rs  sparse_dataset.rs  utils.rs
src/distances/: dot_product.rs  euclidean_distance.rs  multivector.rs
src/distances/simd/: distances.rs  transpose.rs  utils.rs
src/hnsw/: graph_index.rs
src/hnsw_utils/: config_hnsw.rs  hnsw_builder.rs  level.rs  mod.rs
src/indexes/: hnsw.rs  index.rs  mod.rs  rerank_index.rs
src/indexes/hnsw_utils/: mod.rs
src/pylib/: mod.rs
src/quantizers/: encoder.rs  multivector_plain_quantizer.rs  multivector_product_quantizer.rs  plain_quantizer.rs  pq.rs  quantizer.rs  sparse_plain_quantizer.rs  two_level_quantizer.rs
src/topk_selectors/: topk_heap.rs
src/utils/: mod.rs
