[package]
name = "kannolo"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "kANNolo is designed for easy prototyping of ANN Search algorithms while ensuring high effectiveness and efficiency over both dense and sparse vectors."
repository = "https://github.com/TusKANNy/kannolo"
readme = "README.md"
build = "build.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
npyz = "0.8.3"
rand = "0.8.5"
itertools = "0.12.1"
matrixmultiply = "0.3.8"
num-traits = "0.2.18"
byteorder = "1.5.0"
half = { version = "2.4.1", features = ["serde", "std", "num-traits"]}
rayon = "1.10.0"
anyhow = "1.0.86"
clap = { version = "4.3.19", features = ["derive"]}
bitvec = "1.0.1"
bincode = "1.3.3"
csv="1.3.0"
rustc-hash = "2.1.0"
pyo3 = { version = "0.24.0", features = ["extension-module"] } #NOTE: pyo3 and numpy require the same version at the moment
numpy = "0.24.0"
nohash-hasher = "0.2.0"
vectorium = { git = "https://github.com/TusKANNy/vectorium.git" }
indicatif = {version = "0.17.11", features = ["rayon"]}
optional = { version = "0.5.0", features = ["serde"]}
blas    = "0.23"
libc    = "0.2"


[features]
default = []
use-libxsmm = []

[lib]
name = "kannolo"
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
