[package]
name = "kannolo"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "kANNolo is designed for easy prototyping of ANN Search algorithms while ensuring high effectiveness and efficiency over both dense and sparse vectors."
repository = "https://github.com/TusKANNy/kannolo"
readme = "README.md"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8.5"
itertools = "0.14.0"
matrixmultiply = "0.3.8"
num-traits = "0.2.18"
byteorder = "1.5.0"
half = { version = "2.4.1", features = ["serde", "std", "num-traits"]}
rayon = "1.10.0"
anyhow = "1.0.86"
clap = { version = "4.3.19", features = ["derive"]}
bitvec = "1.0.1"
bincode = "2.0.1"
csv="1.3.0"
rustc-hash = "2.1.0"
pyo3 = { version = "0.24.0", features = ["extension-module"] } #NOTE: pyo3 and numpy require the same version at the moment
numpy = "0.24.0"
nohash-hasher = "0.2.0"
vectorium = { git = "https://github.com/TusKANNy/vectorium_private.git" }
indicatif = {version = "0.18.3", features = ["rayon"]}
ndarray = "0.16"
ndarray-npy = "0.9"
optional = { version = "0.5.0", features = ["serde"]}


[features]
default = []
use-libxsmm = []

[lib]
name = "kannolo"
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 1
panic = "abort"
strip = "symbols"
